fix(tasks): mobile task overflow

--- a/src/app/components/tasks/page-task/page-task.component.scss
+++ b/src/app/components/tasks/page-task/page-task.component.scss
@@ -6,8 +6,8 @@
   justify-content: center;
 
   main {
-    margin: $ksi-margin-large 0;
-    max-width: 24cm;
+    margin: $ksi-margin-large $ksi-margin;
+    max-width: min(24cm, calc(100% - (2 * #{$ksi-margin})));
 
     .head {
       .deadline {
